# streameroo

./: .envrc  .gitignore  Cargo.toml  README.md  compose.yaml
src/: amqp.rs  context.rs  event.rs  lib.rs  rabbitmq_stream.rs
src/amqp/: auto.rs  channel.rs  connection.rs  consumer.rs  context.rs  extensions.rs  handler.rs  mod.rs  result.rs  telemetry.rs
src/event/: mod.rs
tests/: test_amqp.rs
