[package]
name = "streameroo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fnv = "1.0.7"
lapin = "2.5.0"
tokio = { version = "1.40.0", features = ["full", "rt"], optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dev-dependencies]
anyhow = "1.0.91"
