[package]
name = "streameroo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["amqp", "lapin", "event"]

[dependencies]
fnv = "1.0.7"
lapin = "2.5.0"
bytes = { version = "1.8.0", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.213", optional = true }
serde_json = { version = "1.0.132", optional = true }
tokio = { version = "1.40.0", features = ["full", "rt"], optional = true }
thiserror = "2.0.3"
tracing = "0.1.41"
tokio-stream = "0.1.16"

[profile.release]
panic = "abort"

[features]
default = ["tokio", "json"]
tokio = ["dep:tokio"]
msgpack = ["serde", "rmp-serde"]
json = ["serde", "serde_json"]
bytes = ["dep:bytes"]

[dev-dependencies]
anyhow = "1.0.91"
test-context = "0.3.0"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
