[package]
name = "streameroo"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lur1an/streameroo"
keywords = ["amqp", "amqprs", "event"]
description = "Compilation of mini-frameworks & utilities for data-streaming applications"

[dependencies]
fnv = "1.0.7"
uuid = { version = "1.11.0", features = ["v4"] }
bytes = { version = "1.8.0", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.213", optional = true }
serde_json = { version = "1.0.132", optional = true }
tokio = { version = "1.40.0", features = ["full", "rt"], optional = true }
thiserror = "2.0.3"
tracing = "0.1.41"
tokio-stream = "0.1.16"
bson = { version = "2.13.0", optional = true }
amqprs = { version = "2.1.1" }

[profile.release]
panic = "abort"

[features]
default = ["tokio", "json"]
tokio = ["dep:tokio"]
msgpack = ["serde", "rmp-serde"]
json = ["serde", "serde_json"]
bson = ["dep:bson"]
bytes = ["dep:bytes"]

[dev-dependencies]
anyhow = "1.0.91"
nix = { version = "0.29.0", features = ["process", "signal"] }
test-context = "0.3.0"
testcontainers-modules = { version = "0.12.1", features = ["rabbitmq"] }
tracing-subscriber = "0.3.19"
